[package]
name = "rtwod2"
version = "0.1.0"
authors = ["Thomas <thomas@monochromatic.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5" }
rand = { version = "0.7" }
log = { version = "0.4" }
env_logger = { version = "0.7" }
clap = { version = "2.33" }
